platform-charts/secrets/templates/vault/vault-nodepore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-vault
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: secrets
    app.kubernetes.io/name: vault
    component: server
  ports:
    - name: nodeport
      port: 80
      protocol: TCP
      targetPort: 8200
      nodePort: 30092
