platform-charts/secrets/templates/vault/vault-ui-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ui-http-route
spec:
  parentRefs:
    - name: default-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "vault-ui.192.168.100.243.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-ui
          port: 8200
